cargo-features = ["resolver", "named-profiles"]

[workspace]
members = [
    "build/*",
    "sys/*",
    "lib/*",
    "app/*",
    "task/*",
    "drv/*",
    "test/*",

    "stage0",
]
default-members = []
resolver = "2"

[profile.release]
codegen-units = 1 # better optimizations
debug = 2 # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = "z" # smaller optimizations

[profile.dev]
opt-level = 1 # no optimizations was just too painful in terms of flash size

[patch."https://github.com/oxidecomputer/hubris".userlib]
path = "sys/userlib"

[patch."https://github.com/oxidecomputer/hubris".abi]
path = "sys/abi"

[workspace.dependencies]
anyhow = { version = "1.0.31", default-features = false, features = ["std"] }
atty = { version = "0.2", default-features = false }
bitfield = { version = "0.13", default-features = false }
bitflags = { version = "1.2.1", default-features = false }
bstringify = { version = "0.1.2", default-features = false }
byteorder = { version = "1.3.4", default-features = false }
cargo_metadata = { version = "0.12.0", default-features = false }
cfg-if = { version = "1", default-features = false }
chrono = { version = "0.4", default-features = false }
clap = { version = "3.0.14", features = ["derive"] }
colored = { version = "2.0", default-features = false }
convert_case = { version = "0.4", default-features = false }
corncobs = { version = "0.1.1", default-features = false }
cortex-m = { version = "0.7", features = ["inline-asm"]}
cortex-m-rt = { version = "0.6.12", default-features = false }
cortex-m-semihosting = { version = "0.5.0", default-features = false }
crc = { version = "3.0.0", default-features = false }
ctrlc = { version = "3.1.5", default-features = false }
derive_more = { version = "0.99", default-features = false }
digest = { version = "0.10", default-features = false }
dunce = { version = "1.0.2", default-features = false }
ecdsa = { version = "0.12.4", default-features = false, features = ["der"] }
embedded-hal = { version = "0.2", default-features = false }
enum-map = { version = "2.4.1", default-features = false }
filetime = { version = "0.2.12", default-features = false }
fletcher = { version = "0.3", default-features = false }
fnv = { version = "1.0.7", default-features = false }
getrandom = { version = "0.2", default-features = false }
goblin = { version = "0.4.3", features = ["std", "elf32", "endian_fd"] }
heapless = { version = "0.7.16", default-features = false }
hkdf = { version = "0.12", default-features = false }
hmac = { version = "0.10.1", default-features = false }
hubpack = { version = "0.1", default-features = false }
if_chain = {version = "1", default-features = false }
indexmap = { version = "1.4.0", features = ["serde-1"] }
itertools = { version = "0.10.5", default-features = false }
lpc55-pac = { version = "0.4" }
memchr = { version = "2.4", default-features = false }
memoffset = { version = "0.6.5", default-features = false }
multimap = { version = "0.8.3", default-features = false }
nb = { version = "1", default-features = false }
num = { version = "0.4", default-features = false }
num-derive = { version = "0.3.3", features = ["full-syntax"] }
num-traits = { version = "0.2.12", default-features = false }
p256 = { version = "0.9.0", default-features = false, features = ["ecdsa", "ecdsa-core"] }
panic-halt = { version = "0.2.0", default-features = false }
panic-itm = { version = "0.4.1", default-features = false }
panic-semihosting = { version = "0.5.3", default-features = false }
paste = { version = "1", default-features = false }
path-slash = { version = "0.1.3", default-features = false }
proc-macro2 = { version = "1", default-features = false }
quote = { version = "1", default-features = false }
rand = { version = "0.8", default-features = false }
rand_chacha = { version = "0.3", default_features = false }
rand_core = { version = "0.6", default-features = false }
ron = { version = "0.7", default-features = false }
scroll = { version = "0.10", default-features = false }
serde = { version = "1.0.114", default_features = false, features = ["derive"] }
serde-big-array = { version = "0.4", default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
serde_repr = { version = "0.1", default-features = false }
sha2 = { version = "0.9", default-features = false }
sha3 = { version = "0.10", default-features = false }
smbus-pec = { version = "1.0.1", default-features = false }
smoltcp = { version = "0.8.0", default-features = false, features = ["proto-ipv6", "medium-ethernet", "socket-udp", "async"] }
spin = { version = "0.9.4", default-features = false, features = ["mutex", "spin_mutex"]}
srec = { version = "0.2.0", default-features = false }
ssmarshal = { version = "1.0.0", default-features = false }
static_assertions = { version = "1" }
stm32f3 = { version = "0.13.0", default-features = false }
stm32f4 = { version = "0.13.0", default-features = false }
stm32h7 = { version = "0.14", default-features = false }
strsim = { version = "0.10.0", default-features = false }
syn = { version = "1", features = ["parsing"] }
toml = { version = "0.5.6", default-features = false }
vcell = { version = "0.1.2", default-features = false }
walkdir = { version = "2.0.0", default-features = false }
zerocopy = { version = "0.6.1", default-features = false }
zeroize = { version = "1.5.7", default-features = false, features = ["zeroize_derive"] }

# Oxide forks and repos
dice-mfg-msgs = { git = "https://github.com/oxidecomputer/dice-util", rev = "5bc735ff11c6b4dcf8af598f8f3911d66db7b6ad" }
gateway-messages = {git = "https://github.com/oxidecomputer/management-gateway-service", rev = "d7791e4d02571b8414b4c2976b0439234aa4d8c7"}
hif = { git = "https://github.com/oxidecomputer/hif" }
idol = { git = "https://github.com/oxidecomputer/idolatry.git" }
idol-runtime = { git = "https://github.com/oxidecomputer/idolatry.git" }
lpc55_areas = { git = "https://github.com/oxidecomputer/lpc55_support", rev = "5fe64fda52c218cd8d7b31f95a445d8d4ce2cb23" }
lpc55_sign = { git = "https://github.com/oxidecomputer/lpc55_support", rev = "5fe64fda52c218cd8d7b31f95a445d8d4ce2cb23" }
ordered-toml = { git = "https://github.com/oxidecomputer/ordered-toml" }
pmbus = { git = "https://github.com/oxidecomputer/pmbus" }
salty = { git = "https://github.com/oxidecomputer/salty", rev = "eb3c31858f631a7fb9934246c8efdef080d05726" }
spd = { git = "https://github.com/oxidecomputer/spd" }
sprockets-common = { git = "https://github.com/oxidecomputer/sprockets.git", default-features = false }
sprockets-rot = { git = "https://github.com/oxidecomputer/sprockets.git", default-features = false }
stm32g0 = { git = "https://github.com/oxidecomputer/stm32-rs-nightlies", branch = "stm32g0b1-update", default-features = false }
tlvc = { git = "https://github.com/oxidecomputer/tlvc" }
tlvc-text = { git = "https://github.com/oxidecomputer/tlvc" }
vsc7448-pac = { git = "https://github.com/oxidecomputer/vsc7448" }

