[workspace]
members = [
    "build/*",
    "sys/*",
    "lib/*",
    "app/*",
    "task/*",
    "drv/*",
    "test/*",
]
default-members = []
resolver = "2"

[profile.release]
codegen-units = 1 # better optimizations
debug = 2 # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = "z" # smaller optimizations

[profile.dev]
opt-level = 1 # no optimizations was just too painful in terms of flash size

[profile.release.package.endoscope]
codegen-units = 1
debug = 2
opt-level = "z"

[profile.dev.package.endoscope]
codegen-units = 1
debug = 2
opt-level = "z"

[profile.bench.package.endoscope]
codegen-units = 1
debug = 2
opt-level = "z"

[patch."https://github.com/oxidecomputer/hubris".userlib]
path = "sys/userlib"

[patch."https://github.com/oxidecomputer/hubris".abi]
path = "sys/abi"

[patch."https://github.com/oxidecomputer/hubris".counters]
path = "lib/counters"

[workspace.dependencies]
anyhow = { version = "1.0.31", default-features = false, features = ["std"] }
array-init = { version = "2.1.0" }
arrayvec = { version = "0.7.4", default-features = false }
atty = { version = "0.2", default-features = false }
bitfield = { version = "0.13", default-features = false }
bitflags = { version = "2.9.1", default-features = false }
bstringify = { version = "0.1.2", default-features = false }
byteorder = { version = "1.3.4", default-features = false }
bzip2-rs = { version = "0.1.2", default-features = false }
capstone = { version = "0.12.0", default-features = false, features = ["full"] }
cargo_metadata = { version = "0.12.0", default-features = false }
cfg-if = { version = "1", default-features = false }
chrono = { version = "0.4", default-features = false }
clap = { version = "3.0.14", default-features = false, features = ["std", "derive"] }
colored = { version = "2.0", default-features = false }
convert_case = { version = "0.4", default-features = false }
corncobs = { version = "0.1.1", default-features = false }
cortex-m = { version = "0.7", default-features = false, features = ["inline-asm"]}
cortex-m-rt = { version = "0.6.12", default-features = false }
cortex-m-semihosting = { version = "0.5.0", default-features = false }
crc = { version = "3.0.0", default-features = false }
critical-section = { version = "1.1.2" }
crypto-common = { version = "0.1.6", default-features = false }
ctrlc = { version = "3.1.5", default-features = false }
derive_more = { version = "0.99", default-features = false, features = ["from", "into"] }
digest = { version = "0.10", default-features = false }
dunce = { version = "1.0.2", default-features = false }
embedded-hal = { version = "0.2", default-features = false }
enum-kinds = { version = "0.5.1", default-features = false, features = ["no-stdlib"] }
enum-map = { version = "2.7.3", default-features = false }
filetime = { version = "0.2.12", default-features = false }
fletcher = { version = "0.3", default-features = false }
fnv = { version = "1.0.7", default-features = false }
getrandom = { version = "0.2", default-features = false }
goblin = { version = "0.4.3", default-features = true } # goblin::Object doesn't work without everything enabled
heapless = { version = "0.7.17", default-features = false }
heck = { version = "0.5.0", default-features = false }
hex-literal = { version = "0.4.1" }
hkdf = { version = "0.12", default-features = false }
hmac = { version = "0.12.1", default-features = false }
hubpack = { version = "0.1.2", default-features = false }
indexmap = { version = "1.4.0", default-features = false, features = ["serde-1"] }
indoc = { version = "2.0.3", default-features = false }
itertools = { version = "0.10.5", default-features = false }
leb128 = { version = "0.2.5", default-features = false }
lpc55-pac = { version = "0.4", default-features = false }
memchr = { version = "2.4", default-features = false }
memoffset = { version = "0.6.5", default-features = false }
minicbor = { version = "2.1.1", default-features = false }
minicbor-serde = { version = "0.6.0", default-features = false }
multimap = { version = "0.8.3", default-features = false }
nb = { version = "1", default-features = false }
num = { version = "0.4", default-features = false }
num-derive = { version = "0.4", default-features = false }
num-traits = { version = "0.2.12", default-features = false }
p256 = { version = "0.13.2", default-features = false, features = ["ecdsa"] }
panic-halt = { version = "0.2.0", default-features = false }
paste = { version = "1", default-features = false }
path-slash = { version = "0.1.3", default-features = false }
prettyplease = { version = "0.2.29", default-features = false }
proc-macro2 = { version = "1", default-features = false }
quote = { version = "1", default-features = false }
rand = { version = "0.8", default-features = false }
rand_chacha = { version = "0.3", default-features = false }
rand_core = { version = "0.6", default-features = false }
rangemap = { version = "1.3", default-features = false }
regex = { version = "1", default-features = false, features = ["std", "perf", "unicode-perl"] }
ron = { version = "0.8", default-features = false }
rustc-demangle = { version = "0.1.24", default-features = false }
scroll = { version = "0.10", default-features = false }
serde = { version = "1.0.114", default-features = false, features = ["derive"] }
serde-big-array = { version = "0.4", default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
serde_repr = { version = "0.1", default-features = false }
serde_with = { version = "3.3.0", default-features = false, features = ["macros"] }
sha2 = { version = "0.10", default-features = false }
sha3 = { version = "0.10", default-features = false }
smbus-pec = { version = "1.0.1", default-features = false }
smoltcp = { version = "0.9", default-features = false, features = ["proto-ipv6", "medium-ethernet", "socket-udp", "async"] }
ssh-key = { version = "0.6.6", default-features = false, features = ["std", "p256"] }
spin = { version = "0.9.4", default-features = false, features = ["mutex", "spin_mutex"]}
ssmarshal = { version = "1.0.0", default-features = false }
static_assertions = { version = "1", default-features = false }
stm32f3 = { version = "0.13.0", default-features = false }
stm32f4 = { version = "0.13.0", default-features = false }
stm32h7 = { version = "0.14", default-features = false }
stm32g0 = { version = "0.15.1", default-features = false }
strsim = { version = "0.10.0", default-features = false }
syn = { version = "2", default-features = false, features = ["derive", "parsing", "proc-macro", "extra-traits", "full", "printing"] }
toml = { version = "0.9.6", default-features = false, features = ["parse", "display", "serde", "preserve_order"] }
toml_edit = { version = "0.23.5", default-features = false, features = ["parse", "display"] }
vcell = { version = "0.1.2", default-features = false }
walkdir = { version = "2.0.0", default-features = false }
zerocopy = { version = "0.8.25", default-features = false }
zerocopy-derive = { version = "0.8.25", default-features = false }
zeroize = { version = "1.5.7", default-features = false, features = ["zeroize_derive"] }
zip = { version = "0.6", default-features = false, features = ["bzip2", "deflate", "zstd"] }

# Oxide forks and repos
attest-data = { git = "https://github.com/oxidecomputer/dice-util", default-features = false, version = "0.4.0" }
dice-mfg-msgs = { git = "https://github.com/oxidecomputer/dice-util", default-features = false, version = "0.2.1" }
gateway-messages = { git = "https://github.com/oxidecomputer/management-gateway-service", default-features = false, features = ["smoltcp"], rev = "ef7ce28f349dca6774b931bb169690e908e3eecd" }
gateway-ereport-messages = { git = "https://github.com/oxidecomputer/management-gateway-service", default-features = false }
gimlet-inspector-protocol = { git = "https://github.com/oxidecomputer/gimlet-inspector-protocol", version = "0.1.0" }
hif = { git = "https://github.com/oxidecomputer/hif", default-features = false }
humpty = { git = "https://github.com/oxidecomputer/humpty", default-features = false, version = "0.1.3" }
hubtools = { git = "https://github.com/oxidecomputer/hubtools", default-features = false, version = "0.4.6" }
idol = { git = "https://github.com/oxidecomputer/idolatry.git", default-features = false }
idol-runtime = { git = "https://github.com/oxidecomputer/idolatry.git", default-features = false }
lpc55_sign = { git = "https://github.com/oxidecomputer/lpc55_support", default-features = false }
measurement-token = { git = "https://github.com/oxidecomputer/lpc55_support", default-features = false }
ordered-toml = { git = "https://github.com/oxidecomputer/ordered-toml", default-features = false }
pmbus = { git = "https://github.com/oxidecomputer/pmbus", default-features = false }
salty = { version = "0.3", default-features = false }
spd = { git = "https://github.com/oxidecomputer/spd", default-features = false }
tlvc = { git = "https://github.com/oxidecomputer/tlvc", default-features = false, version = "0.3.1" }
tlvc-text = { git = "https://github.com/oxidecomputer/tlvc", default-features = false, version = "0.3.0" }
transceiver-messages = { git = "https://github.com/oxidecomputer/transceiver-control/", default-features = false }
vsc7448-pac = { git = "https://github.com/oxidecomputer/vsc7448", default-features = false }

[patch.crates-io]
# See https://gitlab.com/robigalia/ssmarshal/-/merge_requests/2
ssmarshal = { git = "https://gitlab.com/de-vri-es/ssmarshal", rev = "10e90cbe389c8f07c52815857551a051946881ab" }

[workspace.lints.rust]
elided_lifetimes_in_paths = "warn"

[workspace.lints.clippy]
# TODO: turn this back on once we've fixed them :/
#wildcard_imports = "deny"

# TODO: should clean up the comments eventually and switch these back to warn.
too_long_first_doc_paragraph = "allow"
doc_lazy_continuation = "allow"

# TODO: these are currently allowed because it would be a giant pain to fix
# them, but we should make them warn in the future!
too_many_arguments = "allow"
identity_op = "allow"
missing_safety_doc = "allow"
manual_inspect = "allow"
single_match = "allow"
