[package]
name = "build-i2c"
version = "0.1.0"
authors = ["Bryan Cantrill <bryan@oxide.computer>"]
edition = "2018"

[dependencies]
build-util = {path = "../build-util"}
serde = { version = "1.0.114", features = ["derive"] }
indexmap = { version = "1.4.0", features = ["serde-1"] }
anyhow = "1.0.31"
cfg-if = "0.1.10"
multimap = "0.8.3"
convert_case = "0.4"

