[package]
name = "cfpa-update"
version = "0.1.0"
authors = ["Laura Abbott <laura@oxide.computer>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.114", features = ["derive"] }
nxp-structs = { path = "../nxp-structs" }
bitfield = "0.13.2"
tempfile = "3.1.0"
bincode = "1.3.1"
openssl = "0.10.30"
structopt = "0.3"
packed_struct = "0.3.0"
packed_struct_codegen = "0.3.0"
serde_json = "1.0"
