[package]
authors = ["Cliff L. Biffle <cliff@oxide.computer>"]
edition = "2018"
readme = "README.md"
name = "demo-stm32h7"
version = "0.1.0"

[features]
default = ["standalone"]
standalone = ["itm", "h743"]
itm = ["panic-itm", "kern/klog-itm"]
semihosting = ["panic-semihosting", "kern/klog-semihosting"]
h743 = ["stm32h7/stm32h743"]
h753 = ["stm32h7/stm32h753"]
h7b3 = ["stm32h7/stm32h7b3"]
# Available but unused:
# h743v = ["stm32h7/stm32h743v"]
# h747cm4 = ["stm32h7/stm32h747cm4"]
# h747cm7 = ["stm32h7/stm32h747cm7"]
# h753v = ["stm32h7/stm32h753v"]

[dependencies]
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.6.12"
cortex-m-semihosting = "0.3.5"
panic-itm = { version = "0.4.1", optional = true }
panic-halt = { version = "0.2.0", optional = true }
panic-semihosting = { version = "0.5.3", optional = true }
cfg-if = "0.1.10"
stm32h7 = { version = "0.13.0", default-features = false, features = ["rt"] }

[dependencies.kern]
path = "../kern"
default-features = false

[build-dependencies]
build-util = {path = "../build-util"}

# a target for `cargo xtask check`
[package.metadata.build]
target = "thumbv7em-none-eabihf"

# this lets you use `cargo fix`!
[[bin]]
name = "demo-stm32h7"
test = false
bench = false
