[package]
authors = ["Cliff L. Biffle <cliff@oxide.computer>"]
edition = "2018"
readme = "README.md"
name = "demo"
version = "0.1.0"

[features]
default = ['panic-semihosting']

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = {version = "0.2.0", optional = true}
panic-semihosting = {version = "0.5.3", optional = true}

[dependencies.stm32f4]
features = ["stm32f407", "rt"]
version = "0.10.0"

[dependencies.kern]
path = "../kern"

[build-dependencies]
which = "3.1"
serde = "1"
serde_json = "1"

# this lets you use `cargo fix`!
[[bin]]
name = "demo"
test = false
bench = false

