[package]
authors = ["Cliff L. Biffle <cliff@oxide.computer>"]
edition = "2018"
readme = "README.md"
name = "gemini-bu-bare"
version = "0.1.0"

[features]
# You want to provide one of: panic-semihosting, panic-halt, or panic-itm
default = ["panic-semihosting"]

[dependencies]
cortex-m = { version = "0.6.3", features = ["inline-asm"] }
cortex-m-rt = "0.6.12"
cortex-m-semihosting = "0.3.5"
panic-itm = { version = "0.4.1", optional = true }
panic-halt = { version = "0.2.0", optional = true }
panic-semihosting = { version = "0.5.3", optional = true }
cfg-if = "0.1.10"

[dependencies.stm32h7]
git = "https://github.com/oxidecomputer/stm32-rs-nightlies"
features = ["rt", "stm32h743"]

[build-dependencies]
build-util = {path = "../build-util"}

[package.metadata.build]
target = "thumbv7em-none-eabihf"

# this lets you use `cargo fix`!
[[bin]]
name = "gemini-bu-bare"
test = false
bench = false
