[package]
name = "hypocalls"
version = "0.1.0"
authors = ["Laura Abbott <laura@oxide.computer>"]
edition = "2018"

[features]
default = ["standalone"]
standalone = []

[dependencies]
abi = {path = "../abi"}
serde = { version = "1.0.114", default-features = false }
ssmarshal = { version = "1.0.0", default-features = false }
zerocopy = "0.3.0"
num-traits = { version = "0.2.12", default-features = false }
num-derive = "0.3.0"
lpc55_romapi = { path = "../lpc55_romapi" }

# a target for `cargo xtask check`
[package.metadata.build]
target = "thumbv8m.main-none-eabihf"

[lib]
test = false
bench = false
