[package]
name = "kern"
version = "0.1.0"
authors = ["Cliff L. Biffle <cliff@oxide.computer>"]
edition = "2018"

[features]
default = ["klog-semihosting"]
klog-semihosting = ["cortex-m-semihosting"]

[dependencies]
abi = {path = "../abi"}
zerocopy = "0.3.0"
byteorder = {version = "1.3.4", default-features = false}
bitflags = "1.2.1"
cfg-if = "0.1.10"
cortex-m = "0.6.0"
cortex-m-semihosting = {version = "0.3.3", optional = true}
serde = {version = "1", default-features = false}
ssmarshal = {version = "1", default-features = false}
ufmt = "0.1.0"

[lib]
test = false
bench = false
