[package]
name = "lib-casper"
version = "0.1.0"
authors = ["Laura Abbott <laura@oxide.computer>"]
edition = "2018"

[dependencies]
lpc55-pac = "0.1.0"
drv-lpc55-syscon-api = {path = "../drv/lpc55-syscon-api"}
userlib = {path = "../userlib"}
cortex-m-semihosting = "0.3.5"


[features]
default = ["standalone"]
standalone = []

# a target for `cargo xtask check`
[package.metadata.build]
target = "thumbv8m.main-none-eabihf"

[lib]
test = false
bench = false
