[package]
authors = ["Laura Abbott <laura@oxide.computer>"]
edition = "2018"
readme = "README.md"
name = "lpc55"
version = "0.1.0"

[features]
default = ['semihosting']
semihosting = ['panic-semihosting', 'kern/klog-semihosting']

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = {version = "0.2.0", optional = true}
panic-semihosting = {version = "0.5.3", optional = true}
lpc55-pac = "0.1.0"

[dependencies.kern]
path = "../kern"
default-features = false

[build-dependencies]
which = "3.1"
serde = "1"
serde_json = "1"

# this lets you use `cargo fix`!
[[bin]]
name = "lpc55"
test = false
bench = false

