[package]
authors = ["Laura Abbott <laura@oxide.computer>"]
edition = "2018"
readme = "README.md"
name = "lpc55"
version = "0.1.0"

[package.metadata.build]
# Pick ONE of these compilation targets
# target = "thumbv6m-none-eabi"    # Cortex-M0 and Cortex-M0+
# target = "thumbv7m-none-eabi"    # Cortex-M3
# target = "thumbv7em-none-eabi"   # Cortex-M4 and Cortex-M7 (no FPU)
target = "thumbv8m.main-none-eabihf" # Cortex-M4F and Cortex-M7F (with FPU)

[features]
itm = ["panic-itm", "kern/klog-itm"]
semihosting = ["panic-semihosting", "kern/klog-semihosting"]

[dependencies]
cortex-m = "0.6.3"
cortex-m-rt = "0.6.12"
cortex-m-semihosting = "0.3.5"
panic-itm = { version = "0.4.1", optional = true }
panic-halt = { version = "0.2.0", optional = true }
panic-semihosting = { version = "0.5.3", optional = true }
lpc55-pac = "0.1.0"

[dependencies.kern]
path = "../kern"
default-features = false

[build-dependencies]
build-util = {path = "../build-util"}

# this lets you use `cargo fix`!
[[bin]]
name = "lpc55"
test = false
bench = false
