[package]
name = "lpc55_romapi"
version = "0.1.0"
authors = ["Laura Abbott <laura@oxide.computer>"]
edition = "2018"

[features]
default = ["panic-messages"]
panic-messages = []
log-itm = []
log-semihosting = []

[dependencies]
lpc55-pac = "0.1.0"
num-derive = "0.3.3"
num-traits = { version = "0.2", default-features = false }

# a target for `cargo xtask check`
[package.metadata.build]
target = "thumbv8m.main-none-eabihf"

[lib]
test = false
bench = false
