[package]
name = "packager"
version = "0.1.0"
authors = ["Cliff L. Biffle <cliff@oxide.computer>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
toml = "0.5"
structopt = "0.3"
clap = "2"
indexmap = {version = "1.3", features = ["serde-1"]}
serde_json = "1.0"
