[package]
name = "packager"
version = "0.1.0"
authors = ["Cliff L. Biffle <cliff@oxide.computer>"]
edition = "2018"

[dependencies]
serde = {version = "1.0", features = ["derive"]}
toml = "0.5"
structopt = "0.3"
clap = "2"
indexmap = {version = "1.3", features = ["serde-1"]}
serde_json = "1.0"
srec = "0.1"
goblin = {version = "0.2", features = ["std", "elf32", "endian_fd"]}
path-slash = "0.1.2"
