[package]
authors = ["Cliff L. Biffle <cliff@oxide.computer>"]
edition = "2018"
readme = "README.md"
name = "sketch"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
#cortex-m-semihosting = "0.3.3"
#panic-itm = "0.4.1"
panic-halt = "0.2.0"
bitflags = "1.2.1"
byteorder = {version = "1.3.4", default-features = false}
arrayvec = {version = "0.5.1", default-features = false}

# this lets you use `cargo fix`!
[[bin]]
name = "test0"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[build-dependencies]
cc = "1.0"
